# LEAP

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
configs/: convert.yaml  run.yaml
notebooks/: baseline_nn.ipynb
runs/: post.sh  pre.sh  run.sh
src/: callbacks.py  const.py  convert.py  data.py  models.py  run.py  trainer.py  utils.py
src/models/: transformer.py  transformerv2.py  transformerv3.py  wavenet.py
